--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -138,22 +138,22 @@ import heroImage from '../assets/robot .png'
         <a
           href='#'
           class='block rounded-md bg-gray-900 px-3 py-2 text-base font-medium text-white'
-          aria-current='page'>Dashboard</a
+          aria-current='page'>Productos</a
         >
         <a
           href='#'
           class='block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white'
-          >Team</a
+          >¿Quienes somos?</a
         >
         <a
           href='#'
           class='block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white'
-          >Projects</a
+          >Contacto</a
         >
         <a
           href='#'
           class='block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white'
-          >Calendar
+          >Cotiza con nosotros
         </a>
       </div>
     </div>
