--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -1,47 +1,49 @@
 ---
-import { Picture } from "astro:assets";
-import heroImage from "../assets/robotic-arm.png";
-import Link from "../components/ui/link.astro";
+import { Picture } from 'astro:assets'
+import heroImage from '../assets/robotic-arm.png'
+import Link from '../components/ui/link.astro'
 ---
 
 <main
-  class="grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24">
-  <div class="py-6 md:order-1 hidden md:block">
+  class='grid lg:grid-cols-2 place-items-center pt-16 pb-8 md:pt-12 md:pb-24'
+>
+  <div class='py-6 md:order-1 hidden md:block'>
     <Picture
       src={heroImage}
-      alt="Astronaut in the air"
+      alt='Astronaut in the air'
       widths={[200, 400, 600]}
-      sizes="(max-width: 800px) 100vw, 620px"
-      loading="eager"
-      format="avif"
+      sizes='(max-width: 800px) 100vw, 620px'
+      loading='eager'
+      format='avif'
     />
   </div>
   <div>
     <h1
-      class="text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter">
+      class='text-5xl lg:text-6xl xl:text-7xl font-bold lg:tracking-tight xl:tracking-tighter'
+    >
       Equipo de control y automatizacion para la industria
     </h1>
-    <p class="text-lg mt-4 text-slate-600 max-w-xl">
-      Sómos líderes de ventas de equipo de control y automatización <wbr /> 
+    <p class='text-lg mt-4 text-slate-600 max-w-xl'>
+      Sómos líderes de ventas de equipo de control y automatización <wbr />
     </p>
-    <div class="mt-6 flex flex-col sm:flex-row gap-3">
+    <div class='mt-6 flex flex-col sm:flex-row gap-3'>
       <Link
-        href="#"
-        href="https://web3templates.com/templates/astroship-starter-website-template-for-astro"
-        target="_blank"
-        class="flex gap-1 items-center justify-center"
-        rel="noopener">
-
-         Mercado Libre
+        href='#'
+        target='_blank'
+        class='flex gap-1 items-center justify-center'
+        rel='noopener'
+      >
+        Mercado Libre
       </Link>
       <Link
-        size="lg"
-        style="outline"
-        rel="noopener"
-        href="https://github.com/surjithctly/astroship"
-        class="flex gap-1 items-center justify-center"
-        target="_blank">
-         Nuestros Productos
+        size='lg'
+        style='outline'
+        rel='noopener'
+        href='#'
+        class='flex gap-1 items-center justify-center'
+        target='_blank'
+      >
+        Nuestros Productos
       </Link>
     </div>
   </div>
