Remove tracking of deleted large file

--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -5,41 +5,8 @@ const menu = 'Hola como estas'
 import heroImage from '../assets/robot .png'
 ---
 
-<!-- <img
-  src='https://avatars.githubusercontent.com/u/1561955?v=4'
-  alt='VIMA Automation logo- Equipo de control y automatizacion en GDL'
-  class='rounded-full h-10 w-10'
-/> --><!-- <header class='flex justify-between items-center p-5 w-full shadow'>
-  <a href="#"
-    ><span class='text-sky-600 text-xl font-bold uppercase'>Vima </span><span
-      class='text-slate-600 text-xl'>Automation</span
-    >
-  </a>
-  
-  <nav class='bg-white  flex flex-row gap-x-10'>
-    
-    
-  <a
-      href='/Contacto'
-      class='rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white dark:text-gray-800 dark:hover:bg-sky-600'
-      >Contacto</a
-    >
-    <a
-      href='/Marcas'
-      class='rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white dark:text-gray-800 dark:hover:bg-sky-600'
-      >Marcas</a
-    >
-    <a
-      href='/Cotiza'
-      class='rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white'
-      >{menu}</a
-    >
-  </nav>
-  
-</header> -->
-<header>
-  <!-- bg-gray-800' -->
-  <nav class='bg-white dark:bg-gray-800'>
+<header class='fixed top-0 left-0 w-full z-50'>
+  <nav class='bg-white dark:bg-gray-800 shadow-md'>
     <div class='mx-auto max-w-7xl px-2 sm:px-6 lg:px-8'>
       <div class='relative flex h-16 items-center justify-between'>
         <div class='absolute inset-y-0 left-0 flex items-center sm:hidden'>
