--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,6 +2,7 @@
 import { Image } from 'astro:assets';
 import Link from '../components/ui/link.astro';
 import heroBackground from '../assets/hero-background.jpg';
+import MercadoLibre from '../components/ui/icons/MercadoLibre.astro';
 ---
 
 <section class="relative w-full h-screen flex items-center justify-center">
@@ -11,34 +12,37 @@ import heroBackground from '../assets/hero-background.jpg';
       alt="Industrial automation background"
       class="w-full h-full object-cover"
     />
-    <div class="absolute inset-0 bg-black opacity-50"></div>
+    <div class="absolute inset-0 bg-black opacity-80"></div>
   </div>
   
   <div class="relative z-10 text-center text-white max-w-4xl mx-auto px-4">
-    <h1 class="text-4xl md:text-5xl lg:text-6xl font-bold mb-6">
-      Equipo de control y automatización para la industria
+    <h1 class="text-5xl md:text-6xl lg:text-7xl font-extrabold mb-6 text-shadow-lg bg-clip-text text-transparent bg-gradient-to-r from-white to-sky-300" aria-label="Equipo de control y automatización para la industria - Vima Automation">
+      Equipo de control y <span class="text-sky-400">automatización</span> para la industria
     </h1>
-    <p class="text-xl md:text-2xl mb-8">
+    <p class="text-xl md:text-2xl text-zinc-300  mb-8 text-shadow">
       Somos líderes en ventas de equipo de control y automatización
     </p>
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
       <Link
         href="#"
         target="_blank"
-        class="text-lg"
+        class="text-lg rounded-lg bg-sky-500 text-slate-100 hover:bg-sky-700 hover:text-white hover:translate-y-[-2px] transition-all duration-300 ease-out flex items-center justify-center shadow-md hover:shadow-lg font-bold px-6 py-3"
         rel="noopener noreferrer"
       >
-        Mercado Libre
+        <MercadoLibre class="w-8 h-8 mr-2" />
+        <span>Comprar en Mercado Libre</span>
       </Link>
       <Link
-        size="lg"
-        style="outline"
-        rel="noopener noreferrer"
         href="#"
-        class="text-lg"
+        size="lg"
+        class="text-lg rounded-lg bg-sky-100 text-slate-700 hover:bg-sky-700 hover:text-white    hover:translate-y-[-2px] transition-all duration-300 ease-out flex items-center justify-center shadow-md hover:shadow-lg font-semibold px-6 py-3"
         target="_blank"
+        rel="noopener noreferrer"
       >
-        Nuestros Productos
+        <svg xmlns="http://www.w3.org/2000/svg" class="w-5 h-5 mr-2" viewBox="0 0 20 20" fill="currentColor">
+          <path fill-rule="evenodd" d="M10 2a4 4 0 00-4 4v1H5a1 1 0 00-.994.89l-1 9A1 1 0 004 18h12a1 1 0 00.994-1.11l-1-9A1 1 0 0015 7h-1V6a4 4 0 00-4-4zm2 5V6a2 2 0 10-4 0v1h4zm-6 3a1 1 0 112 0 1 1 0 01-2 0zm7-1a1 1 0 100 2 1 1 0 000-2z" clip-rule="evenodd" />
+        </svg>
+        <span>Explorar Productos</span>
       </Link>
     </div>
   </div>
