--- a/src/components/ui/icons/MercadoLibre.astro
+++ b/src/components/ui/icons/MercadoLibre.astro
@@ -1,6 +1,6 @@
 <svg
   xmlns='http://www.w3.org/2000/svg'
-   class="w-6 h-6 mr-2"
+  class='w-6 h-6 mr-2'
   fill='none'
   viewBox='0 0 150 104'
   ><path
