--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -3,7 +3,7 @@ interface Props {
   href: string;
   size?: "md" | "lg";
   block?: boolean;
-  style?: "outline" | "primary" | "inverted" | "muted";
+  style?: "outline" | "primary" | "inverted" | "muted" | "secondary";
   class?: string;
   [x: string]: any;
 }
@@ -24,8 +24,9 @@ const sizes = {
 
 const styles = {
   outline: "bg-white border-2 border-black hover:bg-gray-100 text-black ",
-  primary: "bg-black text-white hover:bg-gray-800  border-2 border-transparent",
-  inverted: "bg-white text-black   border-2 border-transparent",
+  secondary: "bg-sky-500  hover:bg-sky-700 text-zinc-50 transition duration-150 ease-out hover:ease-in ",
+ primary: "bg-yellow-300 text-slate-950 hover:bg-yellow-400 hover:text-slate-800  border-2 border-transparent transition duration-150 ease-out hover:ease-in",
+  inverted: "bg-white text-black    border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
 };
 ---
@@ -34,7 +35,7 @@ const styles = {
   href={href}
   {...rest}
   class:list={[
-    "rounded text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200",
+    "rounded-lg text-lg text-center transition focus-visible:ring-2 ring-offset-2 ring-gray-200",
     block && "w-full",
     sizes[size],
     styles[style],
