--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -1,8 +1,15 @@
 ---
 import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
+import Contact from '../components/Contact.astro';
+import About from '../components/About.astro';
+import Footer from '../components/About.astro'
+
 ---
 
 <Layout title="VIMA Automation">
   <Hero />
+  <Contact />
+  <About />
+  <Footer />
 </Layout>
