--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,11 @@
 ---
 import Robot from './icons/Robot.astro'
-
 const menu = 'Hola como estas'
 import heroImage from '../assets/robot .png'
 ---
 
 <header class='fixed top-0 left-0 w-full z-50'>
-  <nav class='bg-white dark:bg-gray-800 shadow-md py-4'>
+  <nav class='bg-gray-800 shadow-md py-4'>
     <div class='mx-auto max-w-7xl px-2 sm:px-6 lg:px-8'>
       <div class='relative flex h-16 items-center justify-between'>
         <div class='absolute inset-y-0 right-0 flex items-center sm:hidden'>
@@ -78,7 +77,7 @@ import heroImage from '../assets/robot .png'
                 aria-current='page'>Productos</a
               >
               <a
-                href='#'
+                href='#About'
                 class='rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white hidden sm:block'
                 >¿Quienes somos?</a
               >
@@ -88,7 +87,7 @@ import heroImage from '../assets/robot .png'
                 >Contacto</a
               >
               <a
-                href='#'
+                href='#Contacto'
                 class='rounded-md px-3 py-2 text-sm font-medium text-gray-300 hover:bg-gray-700 hover:text-white hidden sm:block'
                 >Cotiza con nosotros</a
               >
@@ -99,8 +98,11 @@ import heroImage from '../assets/robot .png'
     </div>
 
     <!-- Mobile menu, show/hide based on menu state. -->
-    <div class="sm:hidden transition-all duration-500 ease-in-out max-h-0 overflow-hidden opacity-0 bg-white dark:bg-gray-800 shadow-md" id="mobile-menu">
-      <div class="space-y-1 px-2 pb-3 pt-2">
+    <div
+      class='sm:hidden transition-all duration-500 ease-in-out max-h-0 overflow-hidden opacity-0 bg-white dark:bg-gray-800 shadow-md'
+      id='mobile-menu'
+    >
+      <div class='space-y-1 px-2 pb-3 pt-2'>
         <!-- Current: "bg-gray-900 text-white", Default: "text-gray-300 hover:bg-gray-700 hover:text-white" -->
         <a
           href='#'
@@ -108,12 +110,12 @@ import heroImage from '../assets/robot .png'
           aria-current='page'>Productos</a
         >
         <a
-          href='#'
+          href='#About'
           class='block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white'
           >¿Quienes somos?</a
         >
         <a
-          href='#'
+          href='#Contacto'
           class='block rounded-md px-3 py-2 text-base font-medium text-gray-300 hover:bg-gray-700 hover:text-white'
           >Contacto</a
         >
@@ -129,34 +131,40 @@ import heroImage from '../assets/robot .png'
 
 <script>
   document.addEventListener('DOMContentLoaded', () => {
-    const mobileMenuButton = document.querySelector('[aria-controls="mobile-menu"]');
-    const mobileMenu = document.getElementById('mobile-menu');
+    const mobileMenuButton = document.querySelector(
+      '[aria-controls="mobile-menu"]'
+    )
+    const mobileMenu = document.getElementById('mobile-menu')
 
     if (mobileMenuButton && mobileMenu) {
       mobileMenuButton.addEventListener('click', () => {
-        const expanded = mobileMenuButton.getAttribute('aria-expanded') === 'true';
-        mobileMenuButton.setAttribute('aria-expanded', (!expanded).toString());
-        
+        const expanded =
+          mobileMenuButton.getAttribute('aria-expanded') === 'true'
+        mobileMenuButton.setAttribute('aria-expanded', (!expanded).toString())
+
         if (expanded) {
-          mobileMenu.style.maxHeight = '0px';
-          mobileMenu.style.opacity = '0';
-          mobileMenu.style.paddingTop = '0px';
-          mobileMenu.style.paddingBottom = '0px';
+          mobileMenu.style.maxHeight = '0px'
+          mobileMenu.style.opacity = '0'
+          mobileMenu.style.paddingTop = '0px'
+          mobileMenu.style.paddingBottom = '0px'
         } else {
-          mobileMenu.style.maxHeight = mobileMenu.scrollHeight + 'px';
-          mobileMenu.style.opacity = '1';
-          mobileMenu.style.paddingTop = '0.5rem';
-          mobileMenu.style.paddingBottom = '0.75rem';
+          mobileMenu.style.maxHeight = mobileMenu.scrollHeight + 'px'
+          mobileMenu.style.opacity = '1'
+          mobileMenu.style.paddingTop = '0.5rem'
+          mobileMenu.style.paddingBottom = '0.75rem'
         }
-        
+
         // Toggle the icon
-        const openIcon = mobileMenuButton.querySelector('.block');
-        const closeIcon = mobileMenuButton.querySelector('.hidden');
-        if (openIcon instanceof HTMLElement && closeIcon instanceof HTMLElement) {
-          openIcon.classList.toggle('hidden');
-          closeIcon.classList.toggle('hidden');
+        const openIcon = mobileMenuButton.querySelector('.block')
+        const closeIcon = mobileMenuButton.querySelector('.hidden')
+        if (
+          openIcon instanceof HTMLElement &&
+          closeIcon instanceof HTMLElement
+        ) {
+          openIcon.classList.toggle('hidden')
+          closeIcon.classList.toggle('hidden')
         }
-      });
+      })
     }
-  });
+  })
 </script>
