--- a/src/components/ui/link.astro
+++ b/src/components/ui/link.astro
@@ -25,7 +25,7 @@ const sizes = {
 const styles = {
   outline: "bg-white border-2 border-black hover:bg-gray-100 text-black ",
   secondary: "bg-sky-500  hover:bg-sky-700 text-zinc-50 transition duration-150 ease-out hover:ease-in ",
- primary: "bg-yellow-300 text-slate-950 hover:bg-yellow-400 hover:text-slate-800  border-2 border-transparent transition duration-150 ease-out hover:ease-in",
+ primary: "bg-yellow-300 text-slate-950 hover:bg-amber-400 hover:text-slate-800  border-2 border-transparent transition duration-150 ease-out hover:ease-in",
   inverted: "bg-white text-black    border-2 border-transparent",
   muted: "bg-gray-100 hover:bg-gray-200   border-2 border-transparent",
 };
