--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -2,6 +2,7 @@
 import '@fontsource-variable/onest'
 import Header from '../components/Header.astro'
 import Hero from '../components/Hero.astro'
+
 interface Props {
   title: string
 }
@@ -10,7 +11,7 @@ const { title } = Astro.props
 ---
 
 <!doctype html>
-<html lang='en' class='dark'>
+<html lang='es'>
   <head>
     <meta charset='UTF-8' />
     <meta name='description' content='Astro description' />
@@ -26,7 +27,7 @@ const { title } = Astro.props
 </html>
 <style is:global>
   :root {
-    color-scheme: auto;
+    color-scheme: light;
   }
   html {
     font-family: system-ui, sans-serif;
