--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,7 +3,8 @@ import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 import Contact from '../components/Contact.astro';
 import About from '../components/About.astro';
-import Footer from '../components/About.astro'
+import Footer from '../components/footer.astro'
+
 
 ---
 
@@ -11,6 +12,6 @@ import Footer from '../components/About.astro'
   <Hero />
   <Contact />
   <About />
-  <slot />
-  <Footer />
+    <Footer />
+
 </Layout>
