Update hero images

--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -2,8 +2,8 @@
 import { Image } from 'astro:assets';
 import Link from '../components/ui/link.astro';
 import heroBackground1 from '../assets/hero-background.jpg';
-import heroBackground2 from '../assets/hero-background2.png';
-import heroBackground3 from '../assets/hero-background3.png';
+import heroBackground2 from '../assets/hero-background2.jpg';
+import heroBackground3 from '../assets/hero-background3.jpg';
 import MercadoLibre from '../components/ui/icons/MercadoLibre.astro';
 ---
 
