--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -14,22 +14,21 @@ const { title } = Astro.props
 <html lang='es'>
   <head>
     <meta charset='UTF-8' />
-    <meta name='description' content=' Equipo de control y para la industria - PLCs Guadalajara" />
+    <!--  <meta name='description' content=' Equipo de control y para la industria - PLCs Guadalajara" />-->
     <meta name='viewport' content='width=device-width' />
     <link rel='icon' type='image/svg+xml' href='/favicon.svg' />
-    <meta name='generator' content={Astro.generator} />
-    <meta property="og:image" content="./src/assets/index.jpg" />
+    <!-- <meta name='generator' content={Astro.generator} />-->
      <!-- Metadatos Open Graph -->
      <meta property="og:title" content="VIMA Automation" />
      <meta property="og:description" content="Soluciones de control y automatización industrial." />
-     <meta property="og:image" content="https://example.com/path/to/your/image.jpg" />
-     <meta property="og:url" content="https://example.com" />
+     <meta property="og:image" content="./src/assets/index.jpg" />
+     <meta property="og:url" content="https://vima-automation.store" />
      <meta property="og:type" content="website" />
          <!-- Metadatos para Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="VIMA Automation" />
     <meta name="twitter:description" content="Soluciones de control y automatización industrial." />
-    <meta name="twitter:image" content="https://example.com/path/to/your/image.jpg" />
+    <meta name="twitter:image" content="https://vima-automation.store" />
 
     <title>{title}</title>
   </head>
