Update metadata image

--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -21,7 +21,7 @@ const { title } = Astro.props
      <!-- Metadatos Open Graph -->
      <meta property="og:title" content="VIMA Automation" />
      <meta property="og:description" content="Soluciones de control y automatización industrial." />
-     <meta property="og:image" content="./src/assets/index.jpg" />
+     <meta property="og:image" content="https://imgur.com/a/XegaJQw" />
      <meta property="og:url" content="https://vima-automation.store" />
      <meta property="og:type" content="website" />
          <!-- Metadatos para Twitter Cards -->
