--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -20,14 +20,14 @@ const { title } = Astro.props
     <!-- <meta name='generator' content={Astro.generator} />-->
      <!-- Metadatos Open Graph -->
      <meta property="og:title" content="VIMA Automation" />
-     <meta property="og:description" content="Soluciones de control y automatización industrial." />
+     <meta property="og:description" content="Soluciones de control y automatización industrial. PLCs Guadalajara" />
      <meta property="og:image" content="https://imgur.com/a/XegaJQw" />
      <meta property="og:url" content="https://vima-automation.store" />
      <meta property="og:type" content="website" />
          <!-- Metadatos para Twitter Cards -->
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:title" content="VIMA Automation" />
-    <meta name="twitter:description" content="Soluciones de control y automatización industrial." />
+    <meta name="twitter:description" content="Soluciones de control y automatización industrial. PLCs Guadalajara" />
     <meta name="twitter:image" content="https://vima-automation.store" />
 
     <title>{title}</title>
