--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -26,7 +26,7 @@ import MercadoLibre from '../components/ui/icons/MercadoLibre.astro';
     </p>
     <div class="flex flex-col sm:flex-row gap-4 justify-center">
       <Link
-        href="#"
+        href="https://listado.mercadolibre.com.mx/_CustId_1236439?item_id=MLM1769038908&category_id=MLM189736&seller_id=1236439&client=recoview-selleritems&recos_listing=true#origin=upp&component=sellerData&typeSeller=classic"
         target="_blank"
         size="lg"
         style="primary"
