--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,15 +1,10 @@
-<footer class='my-20 sticky bottom-0 left-0 w-full z-50 bg-gray-800 shadow-md py-4'>
+<footer class='my-20  w-full z-50 bg-gray-800 shadow-md py-4'>
   <p class='text-center text-sm text-gray-400'>
     Copyright © {new Date().getFullYear()} VIMA Automation. All rights reserved.
   </p>
-  <!--
-    Can we ask you a favor 🙏
-    Please keep this backlink on your website if possible.
-    or Purchase a commercial license from https://web3templates.com
-  -->
   <p class='text-center text-xs text-gray-400 mt-1'>
     Made by <a
-      href='https://vima-automation.netlify.app/'
+      href='https://vima-automation.store/'
       target='_blank'
       rel='noopener'
       class='hover:underline'
