--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -3,15 +3,11 @@ import Hero from '../components/Hero.astro';
 import Layout from '../layouts/Layout.astro';
 import Contact from '../components/Contact.astro';
 import About from '../components/About.astro';
-import Footer from '../components/footer.astro'
-
-
+import Container from '../components/Container.astro';
 ---
 
 <Layout title="VIMA Automation">
   <Hero />
   <Contact />
   <About />
-    <Footer />
-
 </Layout>
