Fix margins and paddings

--- a/src/components/About.astro
+++ b/src/components/About.astro
@@ -10,12 +10,12 @@ import Layout from "../layouts/Layout.astro";
     <Fragment slot="title">Sobre Nosotros</Fragment>
     <Fragment slot="desc">Quienes somos?</Fragment>
   </Sectionhead>
-<section class="py-16 ">
+<section class="py-16 px-5 ">
   <div class="mx-auto max-w-4xl mt-2">
-    <h2 class="font-medium text-2xl text-gray-800">Sobre Nosotros</h2>
+    <!-- <h2 class="font-medium text-2xl text-gray-800">Sobre Nosotros</h2> -->
     <div class="grid grid-cols-1 md:grid-cols-2 gap-8">
-      <div>
-        <p class="text-lg leading-relaxed text-slate-500 mt-3">
+      <div >
+        <p class="text-lg text-pretty leading-relaxed text-slate-500 mt-3">
           VIMA Automation es líder en la venta de equipos de control y automatización para la industria. Con años de experiencia, ofrecemos soluciones innovadoras y de alta calidad para optimizar procesos industriales.
         </p>
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
