--- a/src/components/Contact.astro
+++ b/src/components/Contact.astro
@@ -12,9 +12,9 @@ import Layout from "../layouts/Layout.astro";
       <Fragment slot="desc">Estamos para servirte...</Fragment>
     </Sectionhead>
 
-    <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16">
+    <div class="grid md:grid-cols-2 gap-10 mx-auto max-w-4xl mt-16 px-5">
       <div>
-        <h2 class="font-medium text-2xl text-gray-800">VIMA Automation</h2>
+        <!-- <h2 class="font-medium text-2xl text-gray-800">VIMA Automation</h2> -->
         <p class="text-lg leading-relaxed text-slate-500 mt-3">
           Tienes algo que decirnos? Estamos para servirte. Llena nuestro formulario, envianos un email o llámanos a nuestro telefono
           También podrás encontrar nuestra dirección por si deseas visitarnos.
