--- a/src/components/Hero.astro
+++ b/src/components/Hero.astro
@@ -24,7 +24,7 @@ import MercadoLibre from '../components/ui/icons/MercadoLibre.astro';
     <p class="text-xl md:text-2xl text-zinc-300  mb-8 text-shadow">
       Somos líderes en ventas de equipo de control y automatización
     </p>
-    <div class="flex flex-col sm:flex-row gap-4 justify-center">
+    <div class="flex flex-col sm:flex-row gap-4 justify-center px-5">
       <Link
         href="https://listado.mercadolibre.com.mx/_CustId_1236439?item_id=MLM1769038908&category_id=MLM189736&seller_id=1236439&client=recoview-selleritems&recos_listing=true#origin=upp&component=sellerData&typeSeller=classic"
         target="_blank"
