--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -1,4 +1,4 @@
-<footer class='my-20  w-full z-50 bg-gray-800 shadow-md py-4'>
+<footer class='  w-full z-50 bg-gray-800 shadow-md py-4'>
   <p class='text-center text-sm text-gray-400'>
     Copyright © {new Date().getFullYear()} VIMA Automation. All rights reserved.
   </p>
